tests/sources/invalid/generics/generic_class_unknown_field.fire
// Unknown field access on a generic class template body (inside a method
// of the class itself, before/without monomorphization).
copyable class Box<T> {
    val: T;

    fn Box(val: T) {
        this.val = val;
    }

    fn bad() -> T {
        return this.nope;  //~ ERROR FS-SEM-0010 @21
    }
}

fn main() -> int32 {
    return 0;
}
